--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
         <module>modules/rocketmq</module>
         <module>modules/sqlline</module>
         <module>modules/ml</module>
+        <module>modules/blockchain</module>
     </modules>
 
     <profiles>
